// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should render 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c14 > *:first-child {
  margin-top: 0;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c17[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c20 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):active,
.c20:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c20[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c27 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c27:hover {
  color: #8c94a6;
}

.c22 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c21 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c25 {
  padding: 0 0.25rem;
}

.c15 {
  margin-bottom: 1rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c19 {
  min-width: 7rem;
}

.c19 + .c18 {
  margin-left: 1rem;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c13 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c14 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c14 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c13"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c14"
          >
            <h3
              class="c15"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c16"
            >
              <button
                class="c17 c18 c19"
              >
                Non
              </button>
              <button
                class="c20 c18 c19"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c26"
      >
        <button
          aria-label="Fermer"
          class="c27"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render a breadcrumbs 1`] = `
.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 1.25rem 0;
  color: #434956;
}

.c8 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c24 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c24:not([disabled]):hover,
.c24:not([disabled]):active,
.c24:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c24[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c31 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c31:hover {
  color: #8c94a6;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c26 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c28 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
  position: relative;
  margin-bottom: 1.25rem;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c11 {
  color: #4c5467;
  font-weight: 600;
}

.c12 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
  display: inline-block;
}

.c13 {
  color: #4c5467;
  font-weight: 600;
}

.c14 {
  margin-left: -10px;
}

.c25 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c29 {
  padding: 0 0.25rem;
}

.c19 {
  margin-bottom: 1rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c23 {
  min-width: 7rem;
}

.c23 + .c22 {
  margin-left: 1rem;
}

.c0 {
  background: #e5f1fe;
}

.c4 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
}

.c4:first-child {
  padding-left: 0;
}

.c5 {
  display: inline-block;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  width: 80%;
}

.c16 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c15 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c8 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c18 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c18 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c9 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c10 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-left: 0;
  }
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c7 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c16 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <a
              href="/"
              title="Retour à l'accueil"
            >
              Accueil
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
             » 
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
             » 
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <div
        class="c1"
        data-main-content="true"
      >
        <div
          class="c2"
        >
          <div
            class="c8"
          >
            <div
              class="c1"
            >
              <div
                class="c9"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c10"
                >
                  <span
                    class="c11"
                  >
                    social groove
                  </span>
                  <span
                    class="c12"
                  >
                    Mis à jour le : 
                    <span
                      class="c13"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c14"
                />
              </div>
              <div
                class="c15"
              >
                <div
                  class="c16"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c17"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c18"
          >
            <h3
              class="c19"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c20"
            >
              <button
                class="c21 c22 c23"
              >
                Non
              </button>
              <button
                class="c24 c22 c23"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c25"
  >
    <div
      class="c26"
    >
      <div
        class="c27"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c28"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c29"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c30"
      >
        <button
          aria-label="Fermer"
          class="c31"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c18[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                     contenant des tooltip sur certains mot comme 
                    <span
                      data-tooltip-ref="__tt__2"
                    >
                      <span
                        aria-describedby="tooltip:1"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        rescrit
                      </span>
                    </span>
                    . match aussi les abbréviation comme 
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        aria-describedby="tooltip:2"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        APE
                      </span>
                    </span>
                     mais pas ape ou ses variantes comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        aria-describedby="tooltip:3"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip for words with diacritics without breaking html 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c18[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      <span
                        data-tooltip-ref="__tt__1"
                      >
                        <span
                          aria-describedby="tooltip:4"
                          class="c13"
                          data-reach-tooltip-trigger=""
                          tabindex="0"
                        >
                          indemnités
                        </span>
                      </span>
                    </strong>
                    comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        aria-describedby="tooltip:5"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip without breaking previous word 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c18[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    annualisation du temps de travail. 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        aria-describedby="tooltip:6"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        Annualisation
                      </span>
                    </span>
                     de l'
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        aria-describedby="tooltip:7"
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        annualisation
                      </span>
                    </span>
                    .
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
